--- a/vistas/login/login.css
+++ b/vistas/login/login.css
@@ -5,12 +5,14 @@ body {
     font-optical-sizing: auto;
     font-weight: 484;
     font-style: normal;
+
     background-color: #ffffff;
     margin: 0;
     padding: 0;
 }
 
 /*Header - Menu / Nav*/
+
 .menu {
     display: flex;
     justify-content: space-between;
@@ -44,7 +46,7 @@ body {
     font-size: 20px;
 }
 
-#alumno {
+#docente {
     background-color: #fa8b4b;
     border-radius: 5px;
     color: white;
@@ -68,25 +70,28 @@ body {
 }
 
 .header-img img {
+    /*max-width: 50%;  Ajusta el tamaño máximo de la imagen */
+    /*height: auto;  Para mantener la proporción de la imagen */
     height: 600px;
     padding-left: 100px;
     float: left;
 }
 
-.form {
+.form{
     margin: 40px auto;
     width: 25%;
 }
 
 form h1 {
     margin-top: 0;
-    font-size: 30px;
+    font-size: 40px;
     text-align: center;
 }
 
 form h2 {
     margin-bottom: 10px;
 }
+
 
 form input[type="email"],
 form input[type="password"] {
@@ -106,29 +111,28 @@ form input[type="submit"] {
     border: none;
     margin-top: 20px;
     border-radius: 5px;
-    transition: background-color 0.3s;
+}
+
+form input[type="submit"]:hover {
+    transition-duration: 0.3s;
+    background-color: #fa8b4b;
 }
 
 .form a {
-    display: block;
-    text-align: center;
-    text-decoration: none;
-    font-weight: bold;
+    display: block; /* Para ocupar el ancho completo del contenedor */
+    text-align: center; /* Centra el texto */
+    text-decoration: none; /* Elimina el subrayado */
+    font-weight: bold; /* Aplica negrita */
     color: #000000a9;
 }
 
-/*Clase para cuando las contraseñas coincidan*/
-.matching-passwords {
-    background-color: #fa8b4b !important;
-    /* Verde */
-}
-
 /*Footer*/
-footer {
-    position: fixed;
+
+footer{
+    position: fixed; /* o absolute dependiendo del caso */
     bottom: 40px;
     left: 0;
-    width: 100%;
+    width: 100%; /* Opcional, para que ocupe todo el ancho */
     color: #00000070;
     padding-left: 40px;
 }
