--- a/vistas/dashboard/docentes/dashboard-docentes.css
+++ b/vistas/dashboard/docentes/dashboard-docentes.css
@@ -1,70 +1,43 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Radio+Canada+Big:ital,wght@0,400..700;1,400..700&display=swap');
+
+*{
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    box-sizing: border-box;
+    font-family: "Radio Canada Big", sans-serif;
 }
 
-#sidebar {
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 250px;
-    height: 100%;
-    background-color: #333;
-    padding-top: 60px;
-    /* Espacio adicional para el botón */
-    transition: width 0.3s ease;
-}
-
-#sidebar ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
-
-#sidebar ul li {
-    padding: 10px;
-    color: #fff;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-}
-
-#sidebar ul li:hover {
-    background-color: #555;
-}
-
-#content {
-    margin-left: 250px;
-    padding: 20px;
-    transition: margin-left 0.3s ease;
-}
-
-h1 {
-    color: #333;
-}
-
-#toggle-sidebar {
+.sidevar {
     position: absolute;
-    left: 10px;
-    top: 10px;
-    background-color: #333;
-    color: #fff;
-    border: none;
-    padding: 10px;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 80px;
+    background-color: #f8ab7c;
+    padding: .4rem .8rem;
+    transition: all 0.5s ease;
+}
+
+.sidevar.active ~ .main-content{
+    left: 250px;
+    width: calc(100% - 250%);
+}
+
+.sidevar.active {
+    width: 250px;
+}
+
+.sidevar #btn {
+    position: absolute;
+    color: #000000;
+    top: .4rem;
+    left: 50%;
+    font-size: 1.2rem;
+    line-height: 50px;
+    transform: translate(-50%);
     cursor: pointer;
-    z-index: 1000;
 }
 
-#toggle-sidebar i {
-    font-size: 20px;
-}
-
-#toggle-sidebar span {
-    display: none;
-    margin-left: 10px;
-}
-
-#toggle-sidebar.active span {
-    display: inline;
+.sidevar.active #btn {
+    left: 90%;
 }
