--- a/vistas/dashboard/docentes/dashboard-docentes.css
+++ b/vistas/dashboard/docentes/dashboard-docentes.css
@@ -7,20 +7,26 @@
     font-family: "Radio Canada Big", sans-serif;
 }
 
+.user-img {
+    width: 50px;
+    border-radius: 100%;
+    border: 1px solid transparent;
+}
+
 .sidevar {
     position: absolute;
     top: 0;
     left: 0;
     height: 100vh;
     width: 80px;
-    background-color: #f8ab7c;
+    background-color: #fa8b4b;
     padding: .4rem .8rem;
     transition: all 0.5s ease;
 }
 
 .sidevar.active ~ .main-content{
     left: 250px;
-    width: calc(100% - 250%);
+    width: calc(100% - 250px);
 }
 
 .sidevar.active {
@@ -36,8 +42,125 @@
     line-height: 50px;
     transform: translate(-50%);
     cursor: pointer;
+    font-size: 1.5rem; /* Aumenta el tamaño de los íconos */
 }
 
 .sidevar.active #btn {
     left: 90%;
+}
+
+.sidevar .top .logo {
+    color: #000000;
+    display: flex;
+    height: 50px;
+    width: 100%;
+    align-items: center;
+    pointer-events: none;
+    opacity: 0;
+}
+
+.sidevar.active .top .logo {
+    opacity: 1;
+}
+
+.top .logo i {
+    font-size: 2rem;
+    margin-right: 5px;
+}
+
+.user {
+    display: flex;
+    align-items: center;
+    margin: 1rem 0;
+}
+
+.user p {
+    color: #000000;
+    opacity: 1;
+    margin-left: 1rem;
+}
+
+.bold {
+    font-weight: 600;
+}
+
+.sidevar p {
+    opacity: 0;
+}
+
+.sidevar.active p {
+    opacity: 1;
+}
+
+.sidevar ul li {
+    position: relative;
+    list-style-type: none;
+    height: 50px;
+    width: 90%;
+    margin: 0.8rem auto;
+    line-height: 50px;
+}
+
+.sidevar ul li a {
+    color: #000000;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    border-radius: 0.8rem;
+}
+
+.sidevar ul li a:hover {
+    background-color: #ffff;
+    color: #000000;
+}
+
+.sidevar ul li a i {
+    min-width: 50px;
+    text-align: center;
+    height: 50px;
+    border-radius: 12px;
+    line-height: 50px;
+    font-size: 1.5rem; /* Aumenta el tamaño de los íconos */
+}
+
+.sidevar .nav-item {
+    opacity: 0;
+}
+
+.sidevar.active .nav-item {
+    opacity: 1;
+}
+
+.sidevar ul li .tooltip {
+    position: absolute;
+    left: 80px;
+    top: 50%;
+    transform: translateY(-50%);
+    box-shadow: 0 0.5rem 0.8rem rgba(0, 0, 0, 0.2);
+    border-radius: .6rem;
+    padding: .4em 1.2rem;
+    line-height: 1.8rem;
+    z-index: 20;
+    opacity: 0;
+    background-color: #fff;
+    transition: opacity 0.3s ease;
+}
+
+.sidevar ul li:hover .tooltip {
+    opacity: 1;
+}
+
+.sidevar.active ul li .tooltip {
+    display: none;
+}
+
+.main-content {
+    position: relative;
+    background-color: white;
+    min-height: 100vh;
+    top: 0;
+    left: 80px;
+    transition: all 0.5s ease;
+    width: calc(100% - 80px);
+    padding: 1rem;
 }
